Add solution to homework 3

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -12,3 +12,4 @@
 @import './partials/themes.scss';
 @import './partials/newsletter.scss';
 @import './partials/footer.scss';
+@import './partials/scroll.scss';
