--- a/src/styles/partials/carousel.scss
+++ b/src/styles/partials/carousel.scss
@@ -29,7 +29,7 @@
 
   &__content {
     display: grid;
-    grid-gap: 30px;
+    grid-column-gap: 30px;
     grid-auto-flow: column;
     margin: 50px 0;
   }
