--- a/src/styles/partials/header.scss
+++ b/src/styles/partials/header.scss
@@ -5,6 +5,7 @@
   background: url(https://images.pexels.com/photos/1029624/pexels-photo-1029624.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);
   background-position: center;
   background-size: cover;
+  position: relative;
 }
 
 .nav-container {
