--- a/src/styles/partials/arrivals.scss
+++ b/src/styles/partials/arrivals.scss
@@ -41,6 +41,7 @@
 
   &__item {
     height: auto;
+    width: 309px;
     margin-bottom: 30px;
     padding: 0;
 
@@ -99,6 +100,10 @@
     line-height: 48px;
     @include setFont(13px, 500);
     cursor: pointer;
+
+    &--invisible {
+      display: none;
+    }
 
     &:focus {
       outline: none;
