--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -6,6 +6,7 @@
 @import './partials/mixins.scss';
 @import './partials/general.scss';
 @import './partials/variables.scss';
+@import './partials/loader.scss';
 @import './partials/header.scss';
 @import './partials/carousel.scss';
 @import './partials/arrivals.scss';
