--- a/src/styles/partials/carousel.scss
+++ b/src/styles/partials/carousel.scss
@@ -36,31 +36,41 @@
 
   &__item {
     width: 268px;
-    height: 338px;
     position: relative;
   }
 
   &__img {
     opacity: 0.7;
+    width: 100%;
 
     &:hover {
       opacity: 1;
     }
 
     &:hover ~ .carousel__info-cnt {
+      background-color: rgba(0, 0, 0, 0.9);
       color: $main-light;
     }
   }
 
   &__info-cnt {
     position: absolute;
-    bottom: 10px;
-    left: 20px;
+    width: 80%;
+    left: 3px;
+    bottom: 8px;
+    border-radius: 0px 0px 0px 12px;
+    background-color: rgba(255, 255, 255, 0.9);
+
+    &:hover {
+      background-color: rgba(0, 0, 0, 0.9);
+      color: $main-light;
+    }    
   }
   
   &__info {
     @include setFont(13px, 500);
     margin-bottom: 10px;
+    padding-left: 20px;
     
     &:last-child {
       font-weight: 700;
@@ -97,6 +107,7 @@
       top: 50%;
       right: 2%;
       transform: translate(-50%, -50%);
+      display: none;
 
       &:active {
         padding-left: 4px;
