--- a/src/styles/partials/themes.scss
+++ b/src/styles/partials/themes.scss
@@ -5,7 +5,7 @@
     @include setContainer;
     display: grid;
     grid-template-columns: repeat(20, 1fr);
-    grid-auto-rows: auto;
+    grid-template-rows:repeat(10, 50px);
     row-gap: 5px;
     column-gap: 5px;
     grid-auto-flow: dense;
@@ -13,6 +13,18 @@
     @media screen and (max-width: 1350px) {
       width: 90%;
     } 
+
+    @media screen and (max-width: 1100px) {
+      grid-template-rows:repeat(10, 40px);
+    } 
+
+    @media screen and (max-width: 900px) {
+      grid-template-rows:repeat(10, 30px);
+    }
+    
+    @media screen and (max-width: 700px) {
+      grid-auto-rows: auto;
+    }
 
     @media screen and (max-width: 500px) {
       display: block;
@@ -50,18 +62,20 @@
   }
 
   &__img {
-    width: 100%;  
-    height: auto;  
+    width: 100%;
+    object-fit: contain;
   }
 
   &__info {
     position: absolute;
     width: 50%;
-    top: 35px;
-    left: 35px;
-    background-color: rgba(255, 255, 255, 0.8);
+    top: 15px;
+    left: 15px;
+    background-color: rgba(200, 200, 200, 0.9);
+    box-shadow: 0 0 5px 5px $main-semi-dark;
+
     padding: 5px;
-    border-radius: 5px;
+    border-radius: 15px 0 0 0;
 
     @media screen and (max-width: 992px) {
       top: 15px;
